--- a/examples/web/index.html
+++ b/examples/web/index.html
@@ -6,7 +6,7 @@
 <h4>Available demos</h4>
 <ul>
   <li><a href="simple.html">Simple demo running a Prolog query</a>
-  <li><a href="paging.html">As above using paginated results</a>
+  <li><a href="chunking.html">As above using paginated results</a>
   <li><a href="input_output.html">Run a dialogue with I/O</a>
   <li><a href="queens.html">The famous 8 queens (on the web!)</a>
   <li><a href="hack.html">You can't run just <em>any</em> Prolog goal</a>
