ADDED: pengine_debug/1

--- a/examples/web/index.html
+++ b/examples/web/index.html
@@ -10,6 +10,7 @@
   <li><a href="input_output.html">Run a dialogue with I/O</a>
   <li><a href="queens.html">The famous 8 queens (on the web!)</a>
   <li><a href="hack.html">You can't run just <em>any</em> Prolog goal</a>
+  <li><a href="debugging.html">Debugging</a>
 </ul>
 </body>
 </html>
