Added example that doesn't work with sleep/1

--- a/examples/web/index.html
+++ b/examples/web/index.html
@@ -11,6 +11,7 @@
   <li><a href="queens.html">The famous 8 queens (on the web!)</a>
   <li><a href="hack.html">You can't run just <em>any</em> Prolog goal</a>
   <li><a href="debugging.html">Debugging</a>
+  <li><a href="pengine.html">Pengine (doesn't work with sleep/1!!)</a>
 </ul>
 </body>
 </html>
