Pass error messages on, so debugging becomes a little easier

--- a/web/test_js/sepresults.html
+++ b/web/test_js/sepresults.html
@@ -60,7 +60,7 @@
 		console.log(this.data);
             }
             function handleError() {
-                $('#out').append(this.data +"<br />");
+                console.log(this.data);
             }
             var pengine = new Pengine({
                 oncreate: handleCreate,
