--- a/examples/web/queens.html
+++ b/examples/web/queens.html
@@ -4,7 +4,7 @@
 	    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	    <title>Eight Queens Demo</title>
 	    <meta name="author" content="Torbjörn Lager and Jan Wielmaker">
-	    <script type="text/javascript" src="/jquery-2.0.3.min.js"></script>
+	    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	    <script type="text/javascript" src="/js/pengines.js"></script>
 	    <script type="text/x-prolog">
 
