CLEANUP: Avoid redistributing jquery.js for running the tests.

--- a/web/test_js/test_json_html.html
+++ b/web/test_js/test_json_html.html
@@ -2,7 +2,7 @@
     <!-- Test json-html output
     -->
     <head>
-        <script src="/jquery-2.0.3.min.js"></script>
+        <script src="/js/jquery-1.11.3.min.js"></script>
         <script src="/js/pengines.js"></script>
         <script type="text/x-prolog">
 
