--- a/web/test_js/ask_syntax.html
+++ b/web/test_js/ask_syntax.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head>
-        <script src="/jquery-2.0.3.min.js"></script>
+        <script src="/js/jquery-1.11.3.min.js"></script>
         <script src="/js/pengines.js"></script>
         <script type="text/x-prolog">
 
