--- a/web/test_js/notemplate.html
+++ b/web/test_js/notemplate.html
@@ -3,7 +3,7 @@
          keys are the variables that do not start with '_'.
     -->
     <head>
-        <script src="/jquery-2.0.3.min.js"></script>
+        <script src="/js/jquery-1.11.3.min.js"></script>
         <script src="/js/pengines.js"></script>
         <script type="text/x-prolog">
 
