--- a/web/test_js/sepresults.html
+++ b/web/test_js/sepresults.html
@@ -1,7 +1,7 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<script src="/jquery-2.0.3.min.js"></script>
+	<script src="/js/jquery-1.11.3.min.js"></script>
         <script src="/js/pengines.js"></script>
 
         <script type="text/x-prolog">
