--- a/web/test_js/simple.html
+++ b/web/test_js/simple.html
@@ -16,17 +16,19 @@
 
         </script>
         <script>
-            var pengine = new Pengine({
-                oncreate: handleCreate,
-                onsuccess: handleSuccess
-            });
+	    var result = [];
+
+	    var pengine = new Pengine({
+	        oncreate: handleCreate,
+		onsuccess: handleSuccess
+	    });
             function handleCreate () {
                 pengine.ask('q(X)', {
                     template:'X'
                 });
             }
             function handleSuccess() {
-		console.log(this.data);
+                result.push(this.data);
 		if ( this.more )
                    pengine.next();
             }
