--- a/web/test_js/test_json_html.html
+++ b/web/test_js/test_json_html.html
@@ -14,6 +14,8 @@
 
         </script>
         <script>
+	    var result = [];
+
             var pengine = new Pengine({
                 oncreate: handleCreate,
                 onsuccess: handleSuccess,
@@ -23,9 +25,8 @@
                 pengine.ask('data(A)');
             }
             function handleSuccess() {
-		//console.log(JSON.stringify(this.data[0].variables[0]));
-		console.log(this.data[0].variables[0].variables[0]);
-		console.log(this.data[0].variables[0].value);
+		result.push(this.data[0].variables[0].variables[0]);
+		result.push(this.data[0].variables[0].value);
 		if ( this.more )
                    pengine.next();
             }
