REVERT: Reverted the changes to move from jQuery to use the new fetch() API for pengines.js.  There are two many issues with the new implementation. notably wrt to aborting queries and error handling.   The modifications will be kept in a branch `jquery-to-fetch-api`.

--- a/web/test_js/notemplate.html
+++ b/web/test_js/notemplate.html
@@ -3,6 +3,7 @@
          keys are the variables that do not start with '_'.
     -->
     <head>
+        <script src="/js/jquery-1.11.3.min.js"></script>
         <script src="/js/pengines.js"></script>
         <script type="text/x-prolog">
 
