--- a/web/test_js/test_json_html.html
+++ b/web/test_js/test_json_html.html
@@ -2,6 +2,7 @@
     <!-- Test json-html output
     -->
     <head>
+        <script src="/js/jquery-1.11.3.min.js"></script>
         <script src="/js/pengines.js"></script>
         <script type="text/x-prolog">
 
