Add more tests, port test sepresults.html

--- a/test_js/browser.html
+++ b/test_js/browser.html
@@ -3,6 +3,9 @@
     <head>
         <title>Pengine JavaScript test cases in browser</title>
     </head>
+    <script type="text/x-prolog">
+        page_prolog_pred(hello_from_page).
+    </script>
     <body>
         <div id="mocha"></div>
     </body>
